RESOLVED FIXED132447
REGRESSION(r168118): [GTK] Build broken.
https://bugs.webkit.org/show_bug.cgi?id=132447
Summary REGRESSION(r168118): [GTK] Build broken.
Carlos Alberto Lopez Perez
Reported 2014-05-01 16:09:21 PDT
Revision r168118 <http://trac.webkit.org/changeset/168118> broke the GTK Build: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/47029 ../../Source/WebKit2/UIProcess/gtk/WebContextGtk.cpp: In member function ‘void WebKit::WebContext::platformInitializeWebProcess(WebKit::WebProcessCreationParameters&)’: ../../Source/WebKit2/UIProcess/gtk/WebContextGtk.cpp:110:16: error: ‘struct WebKit::WebProcessCreationParameters’ has no member named ‘shouldTrackVisitedLinks’ parameters.shouldTrackVisitedLinks = true; ^
Attachments
Patch (1.47 KB, patch)
2014-05-01 17:25 PDT, Carlos Alberto Lopez Perez
no flags
Patch (1.45 KB, patch)
2014-05-02 04:23 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2014-05-01 17:25:52 PDT
Carlos Alberto Lopez Perez
Comment 2 2014-05-02 04:23:05 PDT
WebKit Commit Bot
Comment 3 2014-05-02 05:03:37 PDT
Comment on attachment 230663 [details] Patch Clearing flags on attachment: 230663 Committed r168168: <http://trac.webkit.org/changeset/168168>
WebKit Commit Bot
Comment 4 2014-05-02 05:03:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.