REGRESSION(r168118): [GTK] build broken due to shouldTrackVisitedLinks https://bugs.webkit.org/show_bug.cgi?id=132447

Unreviewed GTK build fix.

shouldTrackVisitedLinks was removed on r168118.
Visited link coloring works as expected after this change.

Patch by Carlos Alberto Lopez Perez <clopez@igalia.com> on 2014-05-02

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::platformInitializeWebProcess): Remove
shouldTrackVisitedLinks parameter.

Canonical link: https://commits.webkit.org/150500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168168 268f45cc-cd09-0410-ab3c-d52691b4dbfc